--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo2.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:image" content="src\assets\meta.png">
+    <meta property="og:image" content="meta.png">
     <title>Nichole | Portfolio</title>
   </head>
   <body>
