--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo2.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:image" content="src\assets\img\cover.png" />
+    <!-- <meta property="og:image" content="{socials.find(social => social.name === 'cover').icon}" /> -->
+    <meta property="og:image" content="/images/cover.png" />
 
     <title>Nichole | Portfolio</title>
   </head>
