--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <meta property="og:image" content="{socials.find(social => social.name === 'cover').icon}" /> -->
     <meta property="og:image" content="/images/cover.png" />
+    <meta property="og:description" content="Nichole McGrew Portfolio">
 
     <title>Nichole | Portfolio</title>
   </head>
