--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo2.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <meta property="og:image" content="{socials.find(social => social.name === 'cover').icon}" /> -->
-    <meta property="og:image" content="/images/cover.png" />
-    <meta property="og:description" content="Nichole McGrew Portfolio">
-
+    
+    <!-- Open Graph metadata -->
+    <meta property="og:title" content="Nichole | Portfolio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://nicholemcgrew.netlify.app/images/cover.png" />
+    <meta property="og:description" content="Learn to create modern websites with sleek parallax effects and bento box layouts. This course covers everything from stylish UI design to mobile-first principles while strengthening your React.js and Tailwind CSS skills." />
+    <meta property="og:url" content="https://nicholemcgrew.netlify.app/portfolio" />
+    
     <title>Nichole | Portfolio</title>
   </head>
   <body>
