--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:image" content="https://nicholemcgrew.netlify.app/images/cover.png" />
     <meta property="og:description" content="Learn to create modern websites with sleek parallax effects and bento box layouts. This course covers everything from stylish UI design to mobile-first principles while strengthening your React.js and Tailwind CSS skills." />
     <meta property="og:url" content="https://nicholemcgrew.netlify.app/portfolio" />
+    <meta name="author" content="[Nichole McGrew]">
     
     <title>Nichole | Portfolio</title>
   </head>
